# repo-context

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DESIGN.md  README-RUST.md  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench.sh
src/: lib.rs  main.rs
src/analysis/: async_boundary.rs  mod.rs  pr.rs
src/app/: export.rs  mod.rs
src/chunk/: code_chunker.rs  line_chunker.rs  markdown_chunker.rs  mod.rs
src/cli/: cache.rs  codeintel.rs  diff.rs  export.rs  guided.rs  index.rs  info.rs  mod.rs  query.rs  utils.rs
src/config/: loader.rs  merge.rs  mod.rs
src/domain/: chunk.rs  config.rs  disposition.rs  file.rs  language.rs  mod.rs  output.rs  ranking.rs  redaction.rs  stats.rs
src/fetch/: context.rs  github.rs  huggingface.rs  local.rs  mod.rs  workspace.rs
src/graph/: lazy_loader.rs  mod.rs  persist.rs  schema.rs  symbol_usage.rs
src/lsp/: rust_analyzer.rs
src/module/: css_scope.rs  detect.rs  focus.rs  focus_picker.rs  graph.rs  mod.rs  picker.rs
src/rank/: bm25.rs  mod.rs  ranker.rs  workspace.rs
src/redact/: entropy.rs  mod.rs  redactor.rs  rules.rs
src/render/: context_pack.rs  guardrails.rs  jsonl.rs  mod.rs  pr_context.rs  report.rs
src/repo_to_prompt/: __init__.py  chunker.py  cli.py  config.py  config_loader.py  fetcher.py  ranker.py  redactor.py  renderer.py  scanner.py  utils.py
src/rerank/: mod.rs
src/scan/: mod.rs  scanner.rs  tree.rs
src/utils/: classify.rs  encoding.rs  hashing.rs  mod.rs  paths.rs  tokens.rs
tests/: __init__.py  cli_tests.rs  export_output_tests.rs  focused_tests.rs  golden_export_tests.rs  test_chunker.py  test_cli_output_dir.py  test_config_loader.py  test_edge_cases.py  test_enhanced_redaction.py  test_fetcher.py  test_fixtures.py  test_golden.py  test_ranker.py  test_redactor.py  test_scanner.py  test_utils.py
tests/snapshots/: golden_export_tests__golden_chunks_jsonl.snap  golden_export_tests__golden_context_pack.snap  golden_export_tests__golden_report_json.snap
