[package]
name = "repo-context"
version = "0.2.0"
edition = "2021"
authors = ["Repo-Context Contributors"]
license = "MIT"
description = "Convert repositories into LLM-friendly context packs for prompting and RAG"
repository = "https://github.com/wheevu/repo-context"
keywords = ["llm", "rag", "repository", "context", "prompt"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "repo_context"
path = "src/lib.rs"

[[bin]]
name = "repo-context"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env", "wrap_help"] }

# Error handling and logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# File discovery and path handling
ignore = "0.4"
walkdir = "2.5"
globset = "0.4"

# Git operations
git2 = "0.19"

# Regex and text processing
regex = "1.10"
once_cell = "1.19"

# Encoding detection
encoding_rs = "0.8"
chardetng = "0.1"

# Syntax-aware parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Hashing and IDs
sha2 = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rustpython-parser = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
