[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-to-prompt"
version = "0.1.0"
description = "Convert repositories into LLM-friendly context packs for prompting and RAG"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Repo-to-Prompt Contributors" }
]
keywords = ["llm", "rag", "repository", "context", "prompt", "chunking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
treesitter = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]
tiktoken = [
    "tiktoken>=0.5.0",
]
all = [
    "repo-to-prompt[treesitter,tiktoken]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
repo-to-prompt = "repo_to_prompt.cli:app"
r2p = "repo_to_prompt.cli:app"

[project.urls]
Homepage = "https://github.com/repo-to-prompt/repo-to-prompt"
Repository = "https://github.com/repo-to-prompt/repo-to-prompt"
Issues = "https://github.com/repo-to-prompt/repo-to-prompt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_to_prompt"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008: typer.Option/Argument in defaults is standard Typer pattern

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
